--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "URL shortener built for Lighthouse Labs Web Development Bootcamp",
   "main": "tinyApp.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
   },
   "devDependencies": {},
