--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "tinyApp.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2"
   },
