--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "URL shortener built for Lighthouse Labs Web Development Bootcamp",
   "main": "tinyApp.js",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "dialog": "^0.3.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2"
   },
